force-app/main/default/objects/md_npsp_pack__Platform_Key__c/md_npsp_pack__Platform_Key__c.object-meta.xml
<CustomObject>
    <label>[Deprecated] Platform Key</label>
    <nameField>
        <displayFormat>MDK-{00000000}</displayFormat>
        <label>Platform Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>