force-app/main/default/objects/md_npsp_pack__Platform_Key__c/fields/md_npsp_pack__Contact__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Deprecated] Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Platform Keys</relationshipLabel>
    <relationshipName>Platform_Keys</relationshipName>
    <type>Lookup</type>
</CustomField>